[package]
authors = ["u007d <curly@humanenginuity.com>"]
categories = ["rust-patterns", "data-structures", "parser-implementations"]
description = """A crate which defines and implements a complete set of `Option`/`Result`-style \
                 Boolean functional combinators on Rust's `bool` primitive type."""
edition = "2018"
keywords = ["bool", "boolean", "functional", "combinator", "adapter"]
license = "MIT OR Apache-2.0"
name = "bool_ext"
readme = "README.md"
repository = "https://github.com/u007d/bool_ext"
version = "0.5.2"

[features]
default = ["std"]
std = []

[dependencies]

[profile.dev]
debug = true
debug-assertions = true
lto = false
opt-level = 0
panic = "unwind"
rpath = false

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
lto = "fat"
opt-level = 3
panic = "unwind"
rpath = false

[profile.test]
debug = true
debug-assertions = true
lto = false
opt-level = 0
rpath = false

[dev-dependencies]
assert2 = "0.3"
